--- a/les-offres.html
+++ b/les-offres.html
@@ -40,15 +40,14 @@
 						</p>
 					</div>
 					<div class="column about-single-element">
-						<i class="fas fa-wrench icon"></i>
 						<p>
-							Quelles sont vos qualitées ? Nous avons :<br/>-Un support rapide<br/>-Des techinicien compétant qui font tout pour que votre serveur reste allummer 24/7 même pendans les maintenances</p>
+						   『Offre débutant』<br/><br/>Panel: Pterodactyl<br/>Ram: 4go<br/>Stockage: 64go<br/>Processeur: Intel Xeon x5680 3.3-3.6 Ghz<br/>vCore: 1<br/>Slots: Illimités<br/>Localisation: France<br/>Base de donnés: 2<br/>Prix: 3€
 						</p>
 					</div>
 					<div class="column about-single-element">
 						<i class="fas fa-wrench icon"></i>
 						<p>
-							Quelles sont vos qualitées ? Nous avons :<br/>-Un support rapide<br/>-Des techinicien compétant qui font tout leurs possible pour que votre serveur reste allummer 24/7 même pendans les maintenances</p>
+						   『Offre débutant』<br/><br/>Panel: Pterodactyl<br/>Ram: 8go<br/>Stockage: 128go<br/>Processeur: Intel Xeon x5680 3.3-3.6 Ghz<br/>vCore: 2<br/>Slots: Illimités<br/>Localisation: France<br/>Base de donnés: 3<br/>Prix: 5€
 						</p>
 					</div>
 				</div>
