--- a/les-offres.html
+++ b/les-offres.html
@@ -4,7 +4,7 @@
 		<!-- head -->
 		<head>
 			<meta charset="utf-8">
-			<title>CaraHosting - A propos</title>
+			<title>CaraHosting - Les offres</title>
 
 			<!-- CSS -->
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
@@ -31,7 +31,7 @@
 
 		<!-- section : a propos -->
 		<div class="block-1">
-			<h1 class="title is-1">Qui sommes nous<br/><br/></h1>
+			<h1 class="title is-1">Les offres<br/><br/></h1>
 			<div class="container about">
 				<div class="columns">
 					<div class="column about-single-element">
@@ -45,7 +45,6 @@
 						</p>
 					</div>
 					<div class="column about-single-element">
-						<i class="fas fa-wrench icon"></i>
 						<p>
 						   『Offre débutant』<br/><br/>Panel: Pterodactyl<br/>Ram: 8go<br/>Stockage: 128go<br/>Processeur: Intel Xeon x5680 3.3-3.6 Ghz<br/>vCore: 2<br/>Slots: Illimités<br/>Localisation: France<br/>Base de donnés: 3<br/>Prix: 5€
 						</p>
