--- a/les-offres.html
+++ b/les-offres.html
@@ -46,7 +46,7 @@
 					</div>
 					<div class="column about-single-element">
 						<p>
-						   『Offre débutant』<br/><br/>Panel: Pterodactyl<br/>Ram: 8go<br/>Stockage: 128go<br/>Processeur: Intel Xeon x5680 3.3-3.6 Ghz<br/>vCore: 2<br/>Slots: Illimités<br/>Localisation: France<br/>Base de donnés: 3<br/>Prix: 5€
+						   『Offre pro』<br/><br/>Panel: Pterodactyl<br/>Ram: 8go<br/>Stockage: 128go<br/>Processeur: Intel Xeon x5680 3.3-3.6 Ghz<br/>vCore: 2<br/>Slots: Illimités<br/>Localisation: France<br/>Base de donnés: 3<br/>Prix: 5€
 						</p>
 					</div>
 				</div>
