--- a/a-propos.html
+++ b/a-propos.html
@@ -8,7 +8,7 @@
 
 			<!-- CSS -->
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-			<link rel="stylesheet" href="src/css/main.css">
+			<link rel="stylesheet" href="src/css/a-propos.css">
 			<!-- CSS -->
 
 			<!-- Font -->
