--- a/a-propos.html
+++ b/a-propos.html
@@ -31,7 +31,7 @@
 
 		<!-- section : a propos -->
 		<div class="block-1">
-			<h1 class="title is-1">Qui sommes nous<br/><br/></h1>
+			<h1 class="title-is-1">Qui sommes nous<br/><br/></h1>
 			<div class="container about">
 				<div class="columns">
 					<div class="column about-single-element">
