--- a/a-propos.html
+++ b/a-propos.html
@@ -31,6 +31,7 @@
 
 		<!-- section : a propos -->
 		<div class="block-1">
+			<button class="button is-link">Revenir a l'accueil</button>
 			<h1 class="title is-1">Qui sommes nous<br/><br/></h1>
 			<div class="container about">
 				<div class="columns">
